fix broken layout

--- a/app/assets/stylesheets/store/shared/_layout.scss
+++ b/app/assets/stylesheets/store/shared/_layout.scss
@@ -115,7 +115,7 @@ body {
 }
 
 ul#products li {
-  margin-bottom: 50px;
+  margin-bottom: 20px;
 
   a.info {
     height: inherit;
